--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
+
+spring.mustache.expose-request-attributes=true
