--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
+
+
+upload.path = E:/myProject/LikeTwitter/src/main/resources/files/
